--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">About</a></li>
         <li><a href="bash.html">Bash</a></li>
         <li><a href="git.html">Git</a></li>
         <li><a href="github.html">GitHub</a></li>
