updated fonts and background

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Marck+Script" rel="stylesheet">
     <title>Love Letters</title>
   </head>
   <body>
@@ -17,7 +18,7 @@
         <li><a href="bash.html">Bash</a></li>
         <li><a href="git.html">Git</a></li>
         <li><a href="github.html">GitHub</a></li>
-        <li><a href="#">Dev Portfolio</a></li>
+        <li><a href="#">Portfolio</a></li>
       </ul>
     </nav>
     <!-- ========main stuff on page======== -->
