--- a/bash.html
+++ b/bash.html
@@ -17,7 +17,7 @@
         <li><a href="bash.html">Bash</a></li>
         <li><a href="git.html">Git</a></li>
         <li><a href="github.html">GitHub</a></li>
-        <li><a href="#">Dev Portfolio</a></li>
+        <li><a href="#">Portfolio</a></li>
       </ul>
     </nav>
     <!-- ========main stuff on page======== -->
