--- a/github.html
+++ b/github.html
@@ -9,7 +9,7 @@
   <body>
     <!-- =======top of page===== -->
     <header>
-      <h1>Dear Git</h1>
+      <h1>Dear GitHub</h1>
     </header>
     <nav>
       <ul>
@@ -17,7 +17,7 @@
         <li><a href="bash.html">Bash</a></li>
         <li><a href="git.html">Git</a></li>
         <li><a href="github.html">GitHub</a></li>
-        <li><a href="#">Dev Portfolio</a></li>
+        <li><a href="#">Portfolio</a></li>
       </ul>
     </nav>
     <!-- ========main stuff on page======== -->
