create individual css files and updated index css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <article class="letter">
         <h2>About the Project</h2>
         <p>
-          The content for this project is a creative approach to a standard operating procedures manual for Bash, Git, and GitHub in the form of love letters. The project expresses the basics of these programs and then provides some more advance techniques. Two of these pages express my undying love for the program and one letter was sadly a break-up letter. Git commit and push to github were used obsessively.
+          The content for this project is a creative approach to a standard operating procedures manual for Bash, Git, and GitHub in the form of love letters. The project expresses the basics of these programs and then provides some more advance techniques. Two of these pages express my undying love for the program and one letter was sadly a break-up letter. Each page utalizes a different css design palete. Git commit and push to github were used obsessively.
         </p>
       </article>
     </main>
