--- a/github.html
+++ b/github.html
@@ -23,6 +23,10 @@
     <!-- ========main stuff on page======== -->
     <main>
       <article class="">
+        <h2>Dear Github,</h2>
+        <p>
+          I love the open relationship you and I are fostering. I am just getting to know you, but the potential for this love we share is endless. The way that you, git, and I are able to enjoy a threeway is practicially orgasmic. There is just so much that I love about you. 
+        </p>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
