update bash and to do lists

--- a/git.html
+++ b/git.html
@@ -23,9 +23,12 @@
     <!-- ========main stuff on page======== -->
     <main>
       <article class="">
-        <h2>Dear Bash,</h2>
+        <h2>Dear Git,</h2>
         <p>
-          You are the one I've been looking for all my life. You are so perfect and easy to communicate with. I feel like you are so easy to get along with compared to some of the other programing software I have dated. 
+          You are the one I've been looking for all my life. You are so perfect and easy to communicate with. I feel like you are so easy to get along with compared to some of the other programing software I have dated.
+        </p>
+        <p>
+          From the moment we <span>init</span> for the first time, my life changed. 
         </p>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -41,3 +44,4 @@
     </footer>
   </body>
 </html>
+<!-- cool things to do  -->
