--- a/bash.html
+++ b/bash.html
@@ -25,8 +25,9 @@
       <article class="">
         <h3>Dear Bash,</h3>
         <p>
-          It's not you, it's me. I just can't get behind using you. I have text editors that can serve my needs better than you can. you are just too old school for my modern sensabilities. It wouldn't be fair for either of us to continue this relationship. 
+          It's not you, it's me. I just can't get behind using you. I have text editors that can serve my needs better than you can. you are just too old school for my modern sensabilities. It wouldn't be fair for either of us to continue this relationship.
         </p>
+        <!-- things I don't like: mistakes are hard to correct, when a mistake is made it can crash the whole thing, have to remember a whole new set of commands where text editor can auto complete. Its hard to click around.   -->
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <p>
@@ -41,3 +42,5 @@
     </footer>
   </body>
 </html>
+<!-- cool things to do  -->
+<!-- 1. fade in black background with a heart break animation probably a gif -->
