added content for bash.html

--- a/bash.html
+++ b/bash.html
@@ -9,7 +9,7 @@
   <body>
     <!-- =======top of page===== -->
     <header>
-      <h1>Dear Bash</h1>
+      <h1>Bash</h1>
       <nav>
         <ul>
           <li><a href="index.html">About</a></li>
@@ -22,19 +22,77 @@
     </header>
     <!-- ========main stuff on page======== -->
     <main>
-      <article class="">
+      <section class="letter">
         <h3>Dear Bash,</h3>
         <p>
-          It's not you, it's me. I just can't get behind using you. I have text editors that can serve my needs better than you can. you are just too old school for my modern sensabilities. It wouldn't be fair for either of us to continue this relationship.
+          It's not you, it's me. I just can't get behind using you. I have text editors that can serve my needs better than you can. You are just too old school for my modern sensabilities. It wouldn't be fair for either of us to continue this relationship.
         </p>
-        <!-- things I don't like: mistakes are hard to correct, when a mistake is made it can crash the whole thing, have to remember a whole new set of commands where text editor can auto complete. Its hard to click around.   -->
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          From the moment I <span id="init" class="key-word">init</span> this relationship you made everything more complicated for me. I have to use <span class="key-words" id="arrows">arrows</span> just to figure out, which is just way too much work compared to other programs I have dated. I have to remember new commands if I want to easily navigate where we currently are. Sure I can <span class="key-words" id="cylce">cycle through</span> where we have been before by going up and down, but that is not enough. </p>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <h3>Sincerely,</h3>
-          <h3>Anthony C. Pappalardo III</h3>
-      </article>
+          There is just too much I have to remember make this a beneficial relationship for both of us. If I want to start a new conversation I have to remember to <span class="key-words" id="cd">CD</span>CD you then I have to remember all the other things that go along with that. Sure you can <span class="key-word" id="tab">autocomplete</span> me sometimes, but at this point what other program can't? Sure you make some things better for me like being able to <span class="key-word" id="mkdir">mkdir</span> multiple folders at once and <span class="key-word" id="touch">create</span> multiple files at a time, but that about the only things I find useful about our interactions.
+        </p>
+        <p>
+          You have too many problems associated with who you are. Anytime I make a simple mistake you seem to freak out and either ignore me or get so angry you crash. It seems like it is just too hard to correct any mistakes I make with you, no matter how much you try to simplify correcting them.
+        </p>
+        <p>
+          You're also just not pretty to look at. I can't help myself, I am a visual guy. I like being able to see when I do things and navigate by visualizing where I'm going instead of having to <span class="key-word" id="ls">ls</span> everytime I want to figure out what's going on. I don't appreciate having to <span class="key-word" id="pwd">pwd</span> anytime I want to figure out where we are. Plus when I pair you with <span class="key-word" id="nano">nano</span> its just harder compared to my relationship with atom.
+        </p>
+        <p>
+          I don't want this to be awkward. I still care for you and I hope we can remain friends. Perhaps, from time to time we can reconnect and be useful to each other, but please don't expect me to do so too often.
+        </p>
+        <h3>best wishes,</h3>
+        <h3>Anthony C. Pappalardo III</h3>
+      </section>
+      <aside>
+        <h3>Bash Commands</h3>
+        <p>
+          <span class="key-word">init bash:</span>    Initialize bash</p>
+        <p>
+          <span class="key-word">Left/right Arrows:</span> Used to navigate the text</p>
+        <p>
+          <span class="key-word">Up/Down Arrows</span> Used to cylce through prior commands</p>
+        <p>
+          <span class="key-word">cd :</span>Change directory
+        </p>
+        <p>
+          <span class="key-word">cd.. :</span>Go up a directory
+        </p>
+        <p>
+          <span class="key-word">cd../.. :</span> Go up two directories
+        </p>
+        <p>
+          <span class="key-word">cd / :</span> Go to root directory
+        </p>
+        <p>
+          <span class="key-word">cd ~ :</span> Go to user Directory
+        </p>
+        <p>
+          <span class="key-word">cd -  :</span> Toggle between last two directories
+        </p>
+        <p>
+          <span class="key-word">tab:</span>Auto Complete
+        </p>
+        <p>
+          <span class="key-word">mkdir:</span>Make directory/folder
+        </p>
+        <p>
+          <span class="key-word">Touch:</span>
+          Create file
+        </p>
+        <p>
+          <span class="key-word">Ls:</span>
+          List contents of present working directory
+        </p>
+        <p>
+          <span class="key-word">Pwd:</span>
+          Show present working directory
+        </p>
+        <p>
+          <span class="key-word">Nano:</span>
+          Open text editor in terminal
+        </p>
+      </aside>
     </main>
     <!-- =======bottom of page========= -->
     <footer>
