--- a/bash.html
+++ b/bash.html
@@ -10,6 +10,8 @@
     <!-- =======top of page===== -->
     <header>
       <h1>Bash</h1>
+      <figure class="broken-heart" id="left-heart"><img src="img/broken-heart-left.gif" alt="half heart break"></figure>
+      <figure class="broken-heart" id="right-heart"><img src="img/broken-heart-right.gif" alt="half heart break"></figure>
       <nav>
         <ul>
           <li><a href="index.html">About</a></li>
