add content to github

--- a/github.html
+++ b/github.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <link rel="stylesheet" href="/css/github.css">
     <title>GitHub Love Letter</title>
   </head>
@@ -24,12 +25,41 @@
     <main>
       <article class="">
         <h2>Dear Github,</h2>
-        <p>
-          I love the open relationship you and I are fostering. I am just getting to know you, but the potential for this love we share is endless. The way that you, git, and I are able to enjoy a threeway is practicially orgasmic. There is just so much that I love about you. 
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+        <section class="paragraph1">
+          <p class="par1">I love the open relationship you and I are fostering.</p>
+          <p class="par2">I am just getting to know you, but the potential for this love we share is endless.</p>
+          <p class="par3">The way that you, git, and I are able to enjoy a threeway is practicially orgasmic.</p>
+          <p class="par4">There is just so much that I love about you.</p>
+        </section>
+        <section class="paragraph2">
+          <p class="par1">Anyone would be lucky to have a program like you.</p>
+          <p class="par2">You have even given me a cute nickname that all my coder friends now call me.</p>
+          <p class="par3">Its so cute that you gave me a secret passcode so you know its actually me.</p>
+        </section>
+        <section class="paragraph3">
+          <p class="par1">I love our open relationship where you allow me to freely work with other coders.</p>
+          <p class="par2">You push me to share my designs with others.</p>
+          <p class="par3">You even encourage me to pull inspiration from others and collaborate with them.</p>
+          <p class="par4">I can't really name any other relationship I've been in where they have been so open!</p>
+        </section>
+        <section class="paragraph4">
+          <p class="par1">I love how you so easily intergrate into a threesome with other programs. I just have to set a repository for us all to get it on.</p>
+          <p class="par2">I can get you going on the terminal with bash.</p>
+          <p class="par3">All I have to do is use that cute nickname of mine and our secret code word.</p>
+          <p class="par4">Even better you allow me to get freaky with atom, my favorite code editor relationship.</p>
+          <p class="par5">Between you, me, and Atom we take out all that foreplay that gets in the way with terminal and its just a simple push and fetch button to get us collaborating. </p>
+        </section>
+        <section>
+          <h3>Love,</h3>
+          <h3>Anthony Pappalardo III</h3>
+        </section>
+        <aside>
+          <p><span class="a-t">Repository:</span>Need to set a repository on Github with the same name as the one on computer to link them</p>
+          <p><span class="a-t">Terminal Set-Up:</span>git remote add origin <span class="i">url from github</span></p>
+          <p><span class="a-t">Github Login:</span> git config user.name "<span class="i">your user name</span>" you are then prompted to enter password</p>
+          <p><span class="a-t">Push:</span> Upload files to github</p>
+          <p><span class="a-t">Pull:</span> Gets projects from github</p>
+        </aside>
       </article>
     </main>
     <!-- =======bottom of page========= -->
