changed backgrounds to pictures

--- a/git.html
+++ b/git.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Eczar" rel="stylesheet">
     <link rel="stylesheet" href="/css/git.css">
     <title>Git Love Letter</title>
   </head>
@@ -22,7 +23,7 @@
     </header>
     <!-- ========main stuff on page======== -->
     <main>
-      <article class="">
+      <article class="letter">
         <h2>Dear Git,</h2>
         <p>
           You are the one I've been looking for all my life. You are so perfect and easy to communicate with. I feel like you are so easy to get along with compared to some of the other programing software I have dated.
@@ -40,7 +41,7 @@
     </main>
     <!-- =======bottom of page========= -->
     <footer>
-      <small>Created by Anthony Pappalardo III 2018</small>
+      <small>Anthony Pappalardo III &copy; 2018</small>
     </footer>
   </body>
 </html>
