--- a/github.html
+++ b/github.html
@@ -23,7 +23,7 @@
     </header>
     <!-- ========main stuff on page======== -->
     <main>
-      <article class="">
+      <article class="letter">
         <h2>Dear Github,</h2>
         <section class="paragraph1">
           <p class="par1">I love the open relationship you and I are fostering.</p>
@@ -64,7 +64,7 @@
     </main>
     <!-- =======bottom of page========= -->
     <footer>
-      <small>Created by Anthony Pappalardo III 2018</small>
+      <small>Anthony Pappalardo III &copy; 2018</small>
     </footer>
   </body>
 </html>
