--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </main>
     <!-- =======bottom of page========= -->
     <footer>
-      <small>Created by Anthony Pappalardo III 2018</small>
+      <small>Anthony Pappalardo III &copy; 2018</small>
     </footer>
   </body>
 </html>
