content for git

--- a/git.html
+++ b/git.html
@@ -10,7 +10,7 @@
   <body>
     <!-- =======top of page===== -->
     <header>
-      <h1>Dear Git</h1>
+      <h1>Git</h1>
       <nav>
         <ul>
           <li><a href="index.html">About</a></li>
@@ -24,20 +24,40 @@
     <!-- ========main stuff on page======== -->
     <main>
       <article class="letter">
-        <h2>Dear Git,</h2>
+        <h2>My Beautiful Git,</h2>
         <p>
           You are the one I've been looking for all my life. You are so perfect and easy to communicate with. I feel like you are so easy to get along with compared to some of the other programing software I have dated.
         </p>
         <p>
-          From the moment we <span>init</span> for the first time, my life changed.
+          From the moment we <span class="key-word">init</span> for the first time, my life changed. When we first met I introduced myself to you by <span class="key-word">configuring</span> my information. You accepted me at once and the rest is history.
         </p>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          I simply adore your love of commitment. I understand that you usually want to prepare for committing to something new by <span class="key-word">add</span>ing to the que. You are so easy to <span>commit</span> to once we are ready to do so. You even have me attach a personal <span class="key-word">message</span> to every commit, which is not only helpful for remembering the occasion, but also so cute. Together you and I can go back and reminisce on these past commitments by looking at the <span class="key-word">log</span> of our love affair.
+        </p>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          Have I ever told you that one of your best qualities is your ability to <span class="key-word">branch</span> out and try new things. You even encourage us to <span class="key-word">checkout</span> multiple things without losing what we just did. If we both fall in love with a idea that was successul you are always there to help me <span class="key-word">merge</span> the two lifestyles. If I don't like something you aren't afraid to <span class="key-word">delete</span> that branch of thought.
+          </p>
+          <p>
+            I can't believe there was a life before I met you. You have improved so much about me and I don't know how I will ever repay you. You complete me.
+          </p>
         <h2>love,</h2>
         <h2>Anthony C. Pappalardo III</h2>
       </article>
+      <aside>
+        <h2>Commands</h2>
+        <p><span>Init:</span>Initializes git by creating a hidden .git folder</p>
+        <p><span>Status:</span>Shows files that have differences between the file and current commit files</p>
+        <p><span>Add . :</span>Stages file for commit</p>
+        <p><span>Commit:</span>stores the update in a new commit must <i>-m</i> to create message</p>
+        <p><span>-m:</span>Message (can not commit with this tag)</p>
+        <p><span>Log:</span>Shows commit history</p>
+        <p><span>Config -global user.name:</span>Allows user to change user name </p>
+        <p><span>Config -global user.email:</span>Allows user to change user email </p>
+        <p><span>Checkout <i>"branch"</i>:</span>Allows you to navigate between branches</p>
+        <p><span>Branch:</span>Experiment with different changes</p>
+        <p><span>Merge:</span>Combine successful branches with master branch</p>
+        <p><span>Branch -d:</span>Remove a branch</p>
+      </aside>
     </main>
     <!-- =======bottom of page========= -->
     <footer>
