--- a/github.html
+++ b/github.html
@@ -10,7 +10,7 @@
   <body>
     <!-- =======top of page===== -->
     <header>
-      <h1>Dear GitHub</h1>
+      <h1>GitHub</h1>
       <nav>
         <ul>
           <li><a href="index.html">About</a></li>
@@ -24,17 +24,17 @@
     <!-- ========main stuff on page======== -->
     <main>
       <article class="letter">
-        <h2>Dear Github,</h2>
+        <h2>My Sexy Github,</h2>
         <section class="paragraph1">
           <p class="par1">I love the open relationship you and I are fostering.</p>
           <p class="par2">I am just getting to know you, but the potential for this love we share is endless.</p>
-          <p class="par3">The way that you, git, and I are able to enjoy a threeway is practicially orgasmic.</p>
+          <p class="par3">The way that you, git, and I are able to connect in a threeway is practicially orgasmic.</p>
           <p class="par4">There is just so much that I love about you.</p>
         </section>
         <section class="paragraph2">
           <p class="par1">Anyone would be lucky to have a program like you.</p>
-          <p class="par2">You have even given me a cute nickname that all my coder friends now call me.</p>
-          <p class="par3">Its so cute that you gave me a secret passcode so you know its actually me.</p>
+          <p class="par2">You have even given me a cute nickname that all my coder friends now call me by.</p>
+          <p class="par3">It's so cute that you gave me a secret passcode so you know its actually me.</p>
         </section>
         <section class="paragraph3">
           <p class="par1">I love our open relationship where you allow me to freely work with other coders.</p>
@@ -46,8 +46,8 @@
           <p class="par1">I love how you so easily intergrate into a threesome with other programs. I just have to set a repository for us all to get it on.</p>
           <p class="par2">I can get you going on the terminal with bash.</p>
           <p class="par3">All I have to do is use that cute nickname of mine and our secret code word.</p>
-          <p class="par4">Even better you allow me to get freaky with atom, my favorite code editor relationship.</p>
-          <p class="par5">Between you, me, and Atom we take out all that foreplay that gets in the way with terminal and its just a simple push and fetch button to get us collaborating. </p>
+          <p class="par4">Even better you allow me to get freaky with atom.</p>
+          <p class="par5">With Atom, you take out all that foreplay that gets in the way with terminal and its just a simple push and fetch button to get us collaborating. </p>
         </section>
         <section>
           <h3>Love,</h3>
