updated keywords styling

--- a/git.html
+++ b/git.html
@@ -45,18 +45,18 @@
       </article>
       <aside>
         <h2>Commands</h2>
-        <p><span>Init:</span>Initializes git by creating a hidden .git folder</p>
-        <p><span>Status:</span>Shows files that have differences between the file and current commit files</p>
-        <p><span>Add . :</span>Stages file for commit</p>
-        <p><span>Commit:</span>stores the update in a new commit must <i>-m</i> to create message</p>
-        <p><span>-m:</span>Message (can not commit with this tag)</p>
-        <p><span>Log:</span>Shows commit history</p>
-        <p><span>Config -global user.name:</span>Allows user to change user name </p>
-        <p><span>Config -global user.email:</span>Allows user to change user email </p>
-        <p><span>Checkout <i>"branch"</i>:</span>Allows you to navigate between branches</p>
-        <p><span>Branch:</span>Experiment with different changes</p>
-        <p><span>Merge:</span>Combine successful branches with master branch</p>
-        <p><span>Branch -d:</span>Remove a branch</p>
+        <p><span class="key-word">Init:</span>Initializes git by creating a hidden .git folder</p>
+        <p><span class="key-word">Status:</span>Shows files that have differences between the file and current commit files</p>
+        <p><span class="key-word">Add . :</span>Stages file for commit</p>
+        <p><span class="key-word">Commit:</span>stores the update in a new commit must <i>-m</i> to create message</p>
+        <p><span class="key-word">-m:</span>Message (can not commit with this tag)</p>
+        <p><span class="key-word">Log:</span>Shows commit history</p>
+        <p><span class="key-word">Config -global user.name:</span>Allows user to change user name </p>
+        <p><span class="key-word">Config -global user.email:</span>Allows user to change user email </p>
+        <p><span class="key-word">Checkout <i>"branch"</i>:</span>Allows you to navigate between branches</p>
+        <p><span class="key-word">Branch:</span>Experiment with different changes</p>
+        <p><span class="key-word">Merge:</span>Combine successful branches with master branch</p>
+        <p><span class="key-word">Branch -d:</span>Remove a branch</p>
       </aside>
     </main>
     <!-- =======bottom of page========= -->
