--- a/github.html
+++ b/github.html
@@ -33,18 +33,18 @@
         </section>
         <section class="paragraph2">
           <p class="par1">Anyone would be lucky to have a program like you.</p>
-          <p class="par2">You have even given me a cute nickname that all my coder friends now call me by.</p>
-          <p class="par3">It's so cute that you gave me a secret passcode so you know its actually me.</p>
+          <p class="par2">You have even given me a cute <span>nickname </span>that all my coder friends now call me by.</p>
+          <p class="par3">It's so hot that you gave me a <span>secret passcode</span> so you know its actually me.</p>
         </section>
         <section class="paragraph3">
           <p class="par1">I love our open relationship where you allow me to freely work with other coders.</p>
-          <p class="par2">You push me to share my designs with others.</p>
-          <p class="par3">You even encourage me to pull inspiration from others and collaborate with them.</p>
+          <p class="par2">You <span>push</span> me to share my designs with others.</p>
+          <p class="par3">You even encourage me to <span>pull</span> inspiration from others and collaborate with them.</p>
           <p class="par4">I can't really name any other relationship I've been in where they have been so open!</p>
         </section>
         <section class="paragraph4">
-          <p class="par1">I love how you so easily intergrate into a threesome with other programs. I just have to set a repository for us all to get it on.</p>
-          <p class="par2">I can get you going on the terminal with bash.</p>
+          <p class="par1">I love how you so easily intergrate into a threesome with other programs. I just have to set a <span>repository</span> for us all to get it on.</p>
+          <p class="par2">I can get you going on the <span>terminal</span> with bash.</p>
           <p class="par3">All I have to do is use that cute nickname of mine and our secret code word.</p>
           <p class="par4">Even better you allow me to get freaky with atom.</p>
           <p class="par5">With Atom, you take out all that foreplay that gets in the way with terminal and its just a simple push and fetch button to get us collaborating. </p>
