fixed css issue

--- a/git.html
+++ b/git.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Eczar" rel="stylesheet">
-    <link rel="stylesheet" href="/css/git.css">
+    <link rel="stylesheet" href="css/git.css">
     <title>Git Love Letter</title>
   </head>
   <body>
@@ -38,7 +38,7 @@
           Have I ever told you that one of your best qualities is your ability to <span class="key-word">branch</span> out and try new things. You even encourage us to <span class="key-word">checkout</span> multiple things without losing what we just did. If we both fall in love with a idea that was successul you are always there to help me <span class="key-word">merge</span> the two lifestyles. If I don't like something you aren't afraid to <span class="key-word">delete</span> that branch of thought.
           </p>
           <p>
-            Once I installed you into Atom you got even more beautiful as a package. I simply adore how you were able to visualize all the steps needed to commit to you and switch branches without having to memorize any good. You even enforce your rule about leaving you an adorable note so you never get angry and quit on me. 
+            Once I installed you into Atom you got even more beautiful as a package. I simply adore how you were able to visualize all the steps needed to commit to you and switch branches without having to memorize any good. You even enforce your rule about leaving you an adorable note so you never get angry and quit on me.
           </p>
           <p>
             I can't believe there was a life before I met you. You have improved so much about me and I don't know how I will ever repay you. You complete me.
