--- a/github.html
+++ b/github.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
-    <link rel="stylesheet" href="/css/github.css">
+    <link rel="stylesheet" href="css/github.css">
     <title>GitHub Love Letter</title>
   </head>
   <body>
