added portfolio link

--- a/bash.html
+++ b/bash.html
@@ -18,7 +18,7 @@
           <li><a href="bash.html">Bash</a></li>
           <li><a href="git.html">Git</a></li>
           <li><a href="github.html">GitHub</a></li>
-          <li><a href="#">Portfolio</a></li>
+          <li><a href="https://creative.colorado.edu/~anpa7322/dev/index.html">Portfolio</a></li>
         </ul>
       </nav>
     </header>
